--- a/assignment-5/styles/a5-browse.css
+++ b/assignment-5/styles/a5-browse.css
@@ -17,7 +17,7 @@
 }
 
 .a5-bun-option-row {
-    width: 50%;
+    width: 33%;
 }
 
 .a5-bun-option {
@@ -33,6 +33,7 @@
 
 .a5-bun-image {
     width: 100%;
+    height: 240px;
 }
 
 .a5-bun-info,
@@ -63,5 +64,5 @@
 }
 
 .a5-bun-name {
-    font-size: 30px;
+    font-size: 24px;
 }
