--- a/assignment-5/styles/a5-home.css
+++ b/assignment-5/styles/a5-home.css
@@ -18,6 +18,25 @@
     width: 50%;
 }
 
+.a5-awards {
+    padding: 0 14%;
+    display: flex;
+}
+
+.a5-awards-row {
+    width: 50%;
+}
+
+.a5-award {
+    display: flex;
+    padding: 20px;
+}
+
+.a5-award_logo {
+    width: 80px;
+    padding-right: 20px;
+}
+
 .a5-review {
     margin: 20px;
     margin-left: 0px;
