Link buns options on browse pg to details pg

--- a/assignment-5/styles/a5-browse.css
+++ b/assignment-5/styles/a5-browse.css
@@ -26,6 +26,11 @@
     margin-left: 0px;
 }
 
+.a5-bun-option-card-link {
+    text-decoration: none;
+    color: #000;
+}
+
 .a5-bun-option-card {
     display: flex;
     flex-direction: column;
