--- a/assignment-5/styles/a5-contact.css
+++ b/assignment-5/styles/a5-contact.css
@@ -11,3 +11,35 @@
     margin: 0px;
     padding: 10px 0;
 }
+
+.a5-contact-form {
+    display: flex;
+    flex-direction: column;
+    width: 65%;
+}
+
+.a5-contact-form-label {
+    margin-top: 14px;
+    margin-bottom: 4px;
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.a5-contact-form-field {
+    height: 40px;
+    padding: 10px;
+}
+
+.a5-contact-form-textarea {
+    height: 100px;
+    padding: 10px;
+    font-family: 'Open Sans', sans-serif;
+}
+
+.a5-contact-submit-btn {
+    height: 40px;
+    margin-top: 40px;
+    font-size: 16px;
+    background-color: #E4B267;
+    border: 1px solid #C4C4C4;
+}
