--- a/assignment-5/styles/a5-details.css
+++ b/assignment-5/styles/a5-details.css
@@ -22,9 +22,14 @@
     margin-right: 60px;
 }
 
-.a5-details-bun-out-of-stock {
+.a5-details-bun-available {
     font-size: 24px;
     color: #4D843A;
+}
+
+.a5-details-bun-out-of-stock {
+    font-size: 24px;
+    color: #FF0303;
 }
 
 .a5-details-bun-detail {
