Fix styling for customer reviews

--- a/assignment-5/styles/a5-home.css
+++ b/assignment-5/styles/a5-home.css
@@ -11,6 +11,13 @@
 
 .a5-customer-reviews {
     padding: 2% 14%;
+    font-size: 18px;
+    text-align: center;
+}
+
+.a5-customer-reviews-header {
+    font-size: 40px;
+    margin: 0px;
 }
 
 .a5-review-row {
