--- a/assignment-5/styles/a5-home.css
+++ b/assignment-5/styles/a5-home.css
@@ -2,7 +2,45 @@
     background-image: url("../assets/cover-image.jpeg");
     height: 550px;
     width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
+
+.a5-landing-cover-body {
+    padding: 20px;
+    background-color: #fff;
+    width: 400px;
+    border: 1px solid #C4C4C4;
+    margin: 20px auto;
+    width: 40%;
+    height: 200px;
+    margin: 10px;
+    padding: 20px;
+    text-align: center;
+}
+
+.a5-landing-cover-body-headline {
+    font-size: 20px;
+}
+
+.a5-landing-cover-body-menu-btn {
+    text-decoration: none;
+    color: #000;
+}
+
+.a5-landing-cover-body-menu-btn-content {
+    padding: 12px;
+    background-color: #E4B267;
+    margin: 20px 80px;
+}
+
+.a5-landing-cover-body-menu-btn-content:hover {
+    background-color: #f0bc6d;
+}
+
 
 .a5-customer-reviews-title {
     font-size: 50px;
