Reduce opacity of cover image

--- a/assignment-5/styles/a5-home.css
+++ b/assignment-5/styles/a5-home.css
@@ -1,5 +1,5 @@
 .a5-landing-cover {
-    background-image: url("../assets/cover-image.jpeg");
+    background-image: url("../assets/cover-image.png");
     height: 550px;
     width: 100%;
     display: flex;
