--- a/assignment-5/styles/a5-contact.css
+++ b/assignment-5/styles/a5-contact.css
@@ -43,3 +43,7 @@
     background-color: #E4B267;
     border: 1px solid #C4C4C4;
 }
+
+.a5-contact-submit-btn:hover {
+    background-color: #f0bc6d;
+}
