--- a/homework_5/styles/a5-home.css
+++ b/homework_5/styles/a5-home.css
@@ -1,3 +1,5 @@
+/* Stylesheet for homepage of the BunBun website */
+
 .a5-landing-cover {
     background-image: url("../assets/cover-image.png");
     height: 550px;
